# pysigQC

./: .gitignore  CLAUDE.md  FIXTURES.md  GUIDE.md  OPTIMIZATIONS.md  PLOTS_GUIDE.md  README.md  TESTS_PYTHON.md  TODOS.md  environment-r.yml  install_r.sh  main.py  main_plot.py  pyproject.toml  run_r_sigqc.R
pysigqc/: __init__.py  compare_metrics.py  eval_compactness.py  eval_expr.py  eval_stan.py  eval_struct.py  eval_var.py  negative_control.py  radar_chart.py
pysigqc/plots/: __init__.py  _style.py  compare_metrics.py  eval_struct.py  eval_var.py  plot_compactness.py  plot_expr.py  plot_metrics.py  plot_negative_control.py  plot_radar.py  plot_stan.py  plot_struct.py  plot_var.py  radar.py
pysigqc_joblib/: __init__.py  _core.py  compare_metrics.py  eval_compactness.py  eval_expr.py  eval_stan.py  eval_struct.py  eval_var.py  negative_control.py  pipeline.py  radar_chart.py  utils.py
sigQC-master/: AUDIT.md
sigQC-master/R/: boxplot.matrix2.R  compare_metrics_loc.R  compute_without_plots.R  draw.heatmaps.R  eval_compactness_loc.R  eval_expr_loc.R  eval_stan_loc.R  eval_struct_loc.R  make_all_plots.R  sigsQcNegativeControl.R
sigQC-master/R_corrected/: compare_metrics_loc.R  compute_without_plots.R  dataset_colors.R  eval_stan_loc.R  eval_struct_loc.R  eval_var_loc.R  grab_grob.R  make_all_plots.R  make_radar_chart_loc.R  (+1 more)
tests/: conftest.py  test_compare_metrics.py  test_eval_compactness.py  test_eval_expr.py  test_eval_stan.py  test_eval_struct.py  test_eval_var.py  test_joblib_equivalence.py  test_medium_cross_validation.py  test_negative_control.py  test_radar_chart.py
(+108 files in other folders)
