[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pysigqc"
version = "0.1.0"
description = "Python port of sigQC — quality control for gene signatures across genomic datasets"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7", "seaborn>=0.12"]
parallel = ["joblib>=1.3"]
all = ["pysigqc[plot,parallel]"]
dev = [
    "pysigqc[all]",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
